// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePickerField> Snapshots and structure should render correctly 1`] = `
<Fragment>
  <TextField
    forceFocusStyle={false}
    label="DatePickerField"
    onChange={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    readOnly={true}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value="18 janvier 1970"
  />
</Fragment>
`;

exports[`<DatePickerField> Snapshots and structure should render correctly when passed a compatible string 1`] = `
<Fragment>
  <TextField
    forceFocusStyle={false}
    label="DatePickerField"
    onChange={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    readOnly={true}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value="18 janvier 1970"
  />
</Fragment>
`;

exports[`<DatePickerField> Snapshots and structure should render correctly when passed a date object 1`] = `
<Fragment>
  <TextField
    forceFocusStyle={false}
    label="DatePickerField"
    onChange={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    readOnly={true}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value="18 janvier 1970"
  />
</Fragment>
`;

exports[`<DatePickerField> Snapshots and structure should render without selected date when passed a invalid string 1`] = `
<Fragment>
  <TextField
    forceFocusStyle={false}
    label="DatePickerField"
    onChange={[Function]}
    onClick={[Function]}
    onKeyPress={[Function]}
    readOnly={true}
    textFieldRef={
      Object {
        "current": null,
      }
    }
    value=""
  />
</Fragment>
`;
